--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -10,6 +10,7 @@
     "ajv": "^8.17.1",
     "axios": "^1.5.1",
     "axios-mock-adapter": "^1.22.0",
+    "bootstrap": "^5.3.5",
     "canvas": "^2.11.2",
     "force": "0.0.3",
     "formik": "^2.4.5",
@@ -20,7 +21,7 @@
     "react-lazy-load-image-component": "^1.6.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.17.0",
+    "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "web-vitals": "^2.1.4",
