--- a/dotnetapp/appsettings.json
+++ b/dotnetapp/appsettings.json
@@ -5,6 +5,7 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*"
-       //Write your connection string here
+    "AllowedHosts": "*","ConnectionStrings": {"conn":"User ID=sa;password=examlyMssql@123;server=localhost;Database=appdb;trusted_connection=false;Persist Security Info=False;Encrypt=False"
+}
+    
 }
