--- a/dotnetapp/appsettings.json
+++ b/dotnetapp/appsettings.json
@@ -5,7 +5,8 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*","ConnectionStrings": {"conn":"User ID=sa;password=examlyMssql@123;server=localhost;Database=appdb;trusted_connection=false;Persist Security Info=False;Encrypt=False"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {"myconn":"User ID=sa;password=examlyMssql@123;server=localhost;Database=appdb;trusted_connection=false;Persist Security Info=False;Encrypt=False"
 }
     
 }
