Hello Team Authorization done

--- a/dotnetapp/appsettings.json
+++ b/dotnetapp/appsettings.json
@@ -7,6 +7,10 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {"myconn":"User ID=sa;password=examlyMssql@123;server=localhost;Database=appdb;trusted_connection=false;Persist Security Info=False;Encrypt=False"
+},"JWT": {
+    "ValidIssuer": "yourIssuer",
+    "ValidAudience": "yourAudience",
+    "Secret": "your_secure_long_random_secret_key_12345"
 }
     
 }
