--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.4.5",
     "jest": "^29.7.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-lazy-load-image-component": "^1.6.0",
