--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -15,6 +15,7 @@
     "force": "0.0.3",
     "formik": "^2.4.5",
     "jest": "^29.7.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.2.0",
