--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "start": "^5.1.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
